# object_detect_project

./: README.md
HIKROBOT-MVS-CAMERA-ROS/config/: camera.yaml
HIKROBOT-MVS-CAMERA-ROS/include/: hikrobot_camera.hpp
HIKROBOT-MVS-CAMERA-ROS/rviz_config/: hikrobot.rviz
HIKROBOT-MVS-CAMERA-ROS/src/: hikrobot_camera.cpp
darknet_ros/darknet/: Makefile  bad.list  darknet  person_train_log.txt
darknet_ros/darknet/scripts/: 2021_test.txt  2021_train.txt  change_xml.py  train.all.txt  train.txt  voc_label.py
darknet_ros/darknet/src/: convolutional_layer.c
darknet_ros/darknet_ros/config/: ros.yaml  yolov3-tiny.yaml
darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
darknet_ros/my_files/: 目标追踪未解决问题：.md
my_files/: 目标追踪未解决问题：.md
serial_node/: CMakeLists.txt  package.xml
serial_node/launch/: object_tracking.launch
serial_node/src/: serial_node.cpp
usercode/: GM6020.c  GM6020.h  can_app.h  definition.c  definition.h  init.c  init.h  main.c  proj_init.c
yuntai_code_ubuntu/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F427IIHX_FLASH.ld  STM32F427IIHX_RAM.ld  yuntai_code_ubuntu Debug.launch  yuntai_code_ubuntu.ioc
yuntai_code_ubuntu/Core/Inc/: definition.h  main.h  mission.h  proj_init.h  stm32f4xx_hal_conf.h  usart.h
yuntai_code_ubuntu/Core/Src/: GM6020.c  can.c  (+10 more)
yuntai_code_ubuntu/Debug/: makefile  objects.list  yuntai_code_ubuntu.elf  yuntai_code_ubuntu.list  yuntai_code_ubuntu.map
yuntai_code_ubuntu/usercode/: GM6020.c  app_serial.c  app_serial.h  can_app.c  definition.c  definition.h  main.c  main.h  mission.c  proj_init.c  proj_init.h
(+360 files in other folders)
